RESOLVED FIXED 111332
[CSS Regions] Region's float parent doesn't size according to region size but to content node size
https://bugs.webkit.org/show_bug.cgi?id=111332
Summary [CSS Regions] Region's float parent doesn't size according to region size but...
Mihai Balan
Reported 2013-03-04 08:17:24 PST
Created attachment 191252 [details] Ref-test highlighting the problem In absence of CSS Regions, floats determine their width according to the width of their children, as per the spec. However, when a child of a float is a region, the float will use the width of the *content flowed in the region* as their width, effectively ignoring the width of the region itself. E.g. in the attached test case, you should see a yellow circle with a black border with a 90 degrees slice from it being black (provided you have the Ahem font installed on your machine). This circle should be entirely contained in a green rectangle. However, right now the green rectangle is as wide as the black slice (just half of the circle wide).
Attachments
Ref-test highlighting the problem (1.10 KB, application/x-zip-compressed)
2013-03-04 08:17 PST, Mihai Balan
no flags
Patch (15.21 KB, patch)
2013-04-21 10:10 PDT, Mihnea Ovidenie
no flags
Patch for landing (15.75 KB, patch)
2013-04-22 21:23 PDT, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2013-04-21 10:10:29 PDT
Dave Hyatt
Comment 2 2013-04-22 12:58:23 PDT
Comment on attachment 198966 [details] Patch r=me
Mihnea Ovidenie
Comment 3 2013-04-22 21:23:56 PDT
Created attachment 199145 [details] Patch for landing
WebKit Commit Bot
Comment 4 2013-04-22 21:51:50 PDT
Comment on attachment 199145 [details] Patch for landing Clearing flags on attachment: 199145 Committed r148943: <http://trac.webkit.org/changeset/148943>
WebKit Commit Bot
Comment 5 2013-04-22 21:51:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.