[CSS Regions] Region's float parent doesn't size according to region size but to content node size https://bugs.webkit.org/show_bug.cgi?id=111332

Reviewed by David Hyatt.

Source/WebCore:

Tests: fast/regions/intrinsic-sized-regions.html
       fast/regions/region-with-float-parent.html

The patch ensures that the computation of region's preferred widths
takes into account the region width/min-width if these values are specified.
Also implemented the computation of intrinsic widths for a region,
based on the min/max preferred widths of the associated flow thread.

* rendering/RenderRegion.cpp:
(WebCore::RenderRegion::computeIntrinsicLogicalWidths):
(WebCore):
(WebCore::RenderRegion::computePreferredLogicalWidths):
* rendering/RenderRegion.h:
(RenderRegion):

LayoutTests:

Added tests for intrinsic and preferred width computation for region.

* fast/regions/intrinsic-sized-regions-expected.txt: Added.
* fast/regions/intrinsic-sized-regions.html: Added.
* fast/regions/region-with-float-parent-expected.txt: Added.
* fast/regions/region-with-float-parent.html: Added.


Canonical link: https://commits.webkit.org/133442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148943 268f45cc-cd09-0410-ab3c-d52691b4dbfc